--- a/composer.json
+++ b/composer.json
@@ -8,26 +8,27 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^7.2.5",
+        "php": "^7.2.5|^8.0",
         "calebporzio/sushi": "^2.0",
-        "fideloper/proxy": "^4.2",
-        "fruitcake/laravel-cors": "^2.0",
+        "fideloper/proxy": "^4.4.1",
+        "fruitcake/laravel-cors": "^2.0.4",
         "fzaninotto/faker": "^1.9.1",
-        "guzzlehttp/guzzle": "^6.3",
-        "laravel-frontend-presets/tall": "^1.7",
-        "laravel/framework": "^7.25",
-        "laravel/tinker": "^2.0",
+        "guzzlehttp/guzzle": "^7.3.0",
+        "laravel-frontend-presets/tall": "^4.0",
+        "laravel/framework": "^8.64.0",
+        "laravel/tinker": "^2.6.2",
+        "laravel/ui": "^3.3",
         "laravel/vapor-core": "^2.8",
         "league/flysystem-aws-s3-v3": "^1.0",
-        "livewire/livewire": "^2.2",
+        "livewire/livewire": "^2.6.7",
         "mediconesystems/livewire-datatables": "dev-master"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.3",
-        "facade/ignition": "^2.0",
-        "mockery/mockery": "^1.3.1",
-        "nunomaduro/collision": "^4.1",
-        "phpunit/phpunit": "^8.5"
+        "facade/ignition": "^2.15.0",
+        "mockery/mockery": "^1.4.4",
+        "nunomaduro/collision": "^5.10.0",
+        "phpunit/phpunit": "^9.5.10"
     },
     "repositories": [{
         "type": "vcs",
